--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,10 @@
     font-size:0.9rem;
     padding-bottom: 30px;
     line-height: normal;
-    background: bisque;
+    background: rgb(21, 24, 68);
     border-radius:0 0 20px 20px;
     padding: 50px;
+    color: white;
 }
 .info h1{
     font-size: 1.5rem;
@@ -45,7 +46,9 @@ h2{
     padding-bottom: 10px;
 }
 
-
+h4{
+    color: rgb(85, 42, 42);
+}
 
 
 .experience{
@@ -61,11 +64,23 @@ h2{
 .date{
     font-weight: lighter;
     color: rgb(158, 145, 145);
+    line-height: normal;
 }
 
 .education{
     padding: 50px;
 }
+.education p{
+    line-height:normal;
+}
+.education h4{
+line-height:30px ;
+}
+
 .education h2{
     font-family: 'Times New Roman', Times, serif;
+}
+.sch{
+    padding-bottom: 20px;
+    border-bottom: 1px solid blanchedalmond;
 }
